assets/css/style.css
/* ... */
/*------------------------Tablet size screen-------------------------*/
@media only screen and (max-width: 768px) {

    /*-----------------------Footer Media queries--------------------------*/


    .footer-row form{
        display: none;
    }

    .text-field {
        position: relative;
        margin-left: 10px;
    }

    #contact-details span:hover i.fa-phone {
        display: none;
    }

    #contact-details span:hover .fa-envelope {
        display: none;
    }

    /*---------------Home pages Media queries--------------------------*/

    .home-container {
        -webkit-box-orient: vertical;
        -webkit-box-direction: normal;
            -ms-flex-direction: column;
                flex-direction: column;
    }

    .home-container .splash-image {
        margin-top: 20px;
        margin-bottom: 20px
    }

    .home-container .main-message {
        width: 500px;
        margin-bottom: 50px;
        margin-top: 12px;
    }

    .home-container .main-message h1 {
        font-size: 30px;
    }

    /*----------------Prices page Media queries--------------------------*/
    .main-prices .row {
        margin-top: 8%;
    }

    .prices-banner {
        -webkit-column-count: 2;
           -moz-column-count: 2;
                column-count: 2;
        font-size: 20px;
        margin-top: 50px;
        margin-left: auto;
        margin-right: auto;
    }

    .main-prices .row {
        margin-top: 0;
    }

    .main-prices .list-unstyled {
        margin-top: 10px;
        margin-bottom: 30px;
    }

    /*-------------------Gallery page Media queries--------------------------*/
    .responsive {
        width: 49.99999%;
        margin: 6px 0;
    }
}

/*-------------------------Mobile size screen---------------------------*/
@media only screen and (max-width: 580px) {

    /*-----------------------Footer Media queries--------------------------*/
    /*I hid the footer row button on smaller screens as it gets a little too cramped*/
    .footer-row form {
        display: none;
    }

    #contact-details {
        text-align: center;
        margin-top: 5px;
        margin-left: 5px;
    }

    #social-icons {
        text-align: center;
        margin-top: 5px;
    }

    .call-button {
        text-align: center;
        margin-top: 10px;
    }

    .text-field {
        width: 90%;
        font-size: 16px;
    }

    /*-----------------------Home page Media queries--------------------------*/

    .home-container .splash-image {
        margin-top: 20px;
        margin-bottom: 20px;
        width: 90vw;
    }

    .home-container .main-message {
        width: 90vw;
    }

    /*-----------------------Prices page Media queries----------------*/
    .main-prices .row {
        margin-top: 8%;
    }

    .main-prices .row {
        margin-top: 0;
    }

    .main-prices .list-unstyled {
        margin-top: 10px;
        margin-bottom: 50px;
    }

    .image-container {
        width: 180px;
        margin-bottom: -40px;
    }

    .image-container p {
        font-size: 20px;
    }

    .prices-banner {
        -webkit-column-count: 1;
           -moz-column-count: 1;
                column-count: 1;
    }
    
    .prices-banner .list-item{
        margin-left: 0;
    }
    .prices-banner li{
        list-style-type: none;
        font-size: 18px;
    }

    .services-banner {
        text-align: left;
        margin-bottom: 50px;
        margin-left: 29px;
        margin-right: auto;
        margin-top: 30px;
        color: black;
        background-color: rgb(255 255 255 / 87%);
        border-radius: 60px;
        padding: 10px;
        font-size: 13px;
    }
    .services-banner p{
        margin-right:2px;
    }
    .services-banner h1{
        font-size: 30px;
    }

    /*-------------------Gallery page Media queries--------------------------*/

    .responsive {
        width: 32.33%;
        height: 100px;
        margin-top: 3px;
        /*I change the display to inline-block to arrange the picture tiles in mobile as I was not able to center the align-items: 
        using float value. In order to use display I had to undefine the float value from previous .responsive rule*/
        float: unset;
        display: inline-block;
    }

    .gallery {
        padding: 0;
        margin: 1px;
        background-color: #21252930;
        border-radius: 30px;
        margin-top: 20px;
        padding-bottom: 40px;
    }

    .gallery img {
        height: 100px;
        padding: 3px;
        margin-top: 20px;
        border: 0 solid transparent;
    }

    /*-------------------Contact page Media queries--------------------------*/
    .form-container {
        padding: 20px;
        width: 90%;
    }
}

